--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "astro-nano",
   "type": "module",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
-    "dev:network": "astro dev --host",
-    "build": "astro check && astro build",
+    "start": "astro dev",
+    "build": "astro build",
     "preview": "astro preview",
-    "preview:network": "astro preview --host",
-    "astro": "astro",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.5.9",
