--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@vercel/node": "^3.1.7"
   }
 }
